# capstone_prompt_injection

./: .gitignore  README.md  capstone_project_state 3-31.md  data_validation.ipynb  environment.yml  pyproject.toml
.claude/: settings.local.json
_project_notes/: INDEX.md  capstone_decisions_for_eduardo.md  capstone_implementation_notes 3-27.md  capstone_methodology_decisions.md  capstone_plan.md  capstone_project_state-03-31.md  capstone_project_state-04-21.md  capstone_state.md  eduardo_meeting_agenda.md  implementation_plan_summary_v2.md
notebooks/: 01_data_validation.ipynb  02_eval_set_construction.ipynb  04_contamination_check.ipynb  05_defense_a_pilot.ipynb  06_augmentation_run.ipynb  06_defense_a_neuralchemy.ipynb  07_defense_a_spml.ipynb  08_bipia_email_qa.ipynb  09_analysis_and_plots.ipynb  README.md  colab_defense_a.ipynb
reports/: README.md  business_decision_framework.md  final_report.md  final_report_outline.md  interim_progress_report.md  literature_tracker.md  methodology_appendix.md  operational_definitions.md  references.bib
results/: README.md  bipia_email_qa.md  bipia_email_qa_metrics.csv  bipia_email_qa_per_category.csv  bipia_email_qa_results.csv  business_decision_matrix.csv  contamination_check.csv  contamination_report.md  defense_a_bootstrap_cis.csv  defense_a_cross_dataset.csv  defense_a_deepset.csv  defense_a_deepset_metrics.csv  defense_a_ensemble_mcnemar.csv  defense_a_ensemble_metrics.csv  defense_a_error_features.csv  defense_a_error_summary.csv  defense_a_full_metrics.csv  defense_a_full_metrics_pretty.csv  defense_a_mcnemar.csv  (+29 more)
(+45 files in other folders)
